--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ audio{display:none}
 </audio>
 
 <main class="card">
-  <h1>MiMi… 🧸💖</h1>
+  <h1>💖🧸MiMi🧸💖</h1>
   <p>
-    I made this just for you.<br>
+    I made this for the prettiest girl in the world.<br>
     No rush. No pressure.
   </p>
 
