--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <title>MiMi 💖</title>
 
-<!-- GOOGLE FONT -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
@@ -88,8 +87,6 @@ button{
   border:none;
   cursor:pointer;
   box-shadow:0 14px 30px rgba(0,0,0,.18);
-  user-select:none;
-  transition:transform .15s ease,background .15s ease;
 }
 
 #yes{
@@ -130,7 +127,6 @@ button{
   to{transform:scale(1);opacity:1}
 }
 
-/* HEARTBEAT */
 @keyframes heartbeat{
   0%{transform:translateY(-50%) scale(1)}
   25%{transform:translateY(-50%) scale(1.05)}
@@ -140,7 +136,6 @@ button{
 }
 .heartbeat{animation:heartbeat 1.5s infinite}
 
-/* FIXED FREEZE POPUP */
 .freeze{
   position:fixed;
   inset:0;
@@ -185,10 +180,7 @@ audio{display:none}
 
   <div class="result" id="result">
     <h1>There it is ❤️</h1>
-    <p>
-      No jokes now.<br>
-      Just me choosing you.
-    </p>
+    <p>No jokes now.<br>Just me choosing you.</p>
     <h1>💍 Always.</h1>
     <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="260">
   </div>
@@ -204,64 +196,68 @@ const result = document.getElementById("result");
 const canvas = document.getElementById("confetti");
 const music = document.getElementById("music");
 
-const noLines = [
-  "Nice try 😌",
-  "That’s adorable, but no.",
-  "You’re just teasing now.",
-  "That button is decorative.",
-  "We both know the answer.",
-  "MiMi… be serious 😏",
-  "This isn’t fooling anyone.",
-  "You’re smiling, aren’t you?",
-  "Okay drama queen.",
-  "Alright, enough playing."
-];
-
-let count = 0;
-let yesScale = 1;
-
 const confettiInstance = confetti.create(canvas,{resize:true,useWorker:true});
-
 setTimeout(()=>yes.classList.add("heartbeat"),2000);
+
+function confettiBlast(){
+  const duration = 2500;
+  const end = Date.now() + duration;
+
+  (function frame(){
+    confettiInstance({
+      particleCount: 20,
+      spread: 160,
+      startVelocity: 55,
+      gravity: 0.7,
+      ticks: 300,
+      scalar: 1.3,
+      shapes: ["square","circle"],
+      origin: { x: Math.random(), y: -0.1 }
+    });
+    if (Date.now() < end) requestAnimationFrame(frame);
+  })();
+}
 
 function clamp(v,min,max){return Math.max(min,Math.min(max,v))}
 
-function dodge(px,py){
-  const z=zone.getBoundingClientRect();
-  const b=no.getBoundingClientRect();
-  let dx=(b.left+b.width/2)-px;
-  let dy=(b.top+b.height/2)-py;
-  let mag=Math.hypot(dx,dy)||1;
-  dx/=mag; dy/=mag;
-
-  no.style.left=clamp((b.left-z.left)+dx*140,0,z.width-b.width)+"px";
-  no.style.top=clamp((b.top-z.top)+dy*140,0,z.height-b.height)+"px";
-
-  yesScale=Math.min(2.5,yesScale+.12);
-  yes.style.transform=`translateY(-50%) scale(${yesScale})`;
-
-  hint.textContent=noLines[count%noLines.length];
-  fake.textContent="MiMi is enjoying this 😏";
-  count++;
-}
+let count=0, yesScale=1;
+const noLines=[
+  "Nice try 😌","That’s adorable, but no.","You’re teasing now.",
+  "Decorative button.","We both know.","MiMi… be serious 😏",
+  "Not fooling anyone.","You’re smiling.","Drama queen.","Enough playing."
+];
 
 zone.addEventListener("pointermove",e=>{
   const b=no.getBoundingClientRect();
-  if(Math.hypot(
-    (b.left+b.width/2)-e.clientX,
-    (b.top+b.height/2)-e.clientY
-  )<150) dodge(e.clientX,e.clientY);
+  if(Math.hypot((b.left+b.width/2)-e.clientX,(b.top+b.height/2)-e.clientY)<150){
+    const z=zone.getBoundingClientRect();
+    let dx=(b.left+b.width/2)-e.clientX;
+    let dy=(b.top+b.height/2)-e.clientY;
+    let mag=Math.hypot(dx,dy)||1;
+    dx/=mag; dy/=mag;
+
+    no.style.left=clamp((b.left-z.left)+dx*140,0,z.width-b.width)+"px";
+    no.style.top=clamp((b.top-z.top)+dy*140,0,z.height-b.height)+"px";
+
+    yesScale=Math.min(2.5,yesScale+.12);
+    yes.style.transform=`translateY(-50%) scale(${yesScale})`;
+
+    hint.textContent=noLines[count%noLines.length];
+    fake.textContent="MiMi is enjoying this 😏";
+    count++;
+  }
 });
 
 no.addEventListener("click",e=>e.preventDefault());
 
 yes.addEventListener("click",()=>{
   music.play().catch(()=>{});
-
   const freeze=document.createElement("div");
   freeze.className="freeze";
   freeze.innerHTML="MiMi 🧸💖<br>This moment is yours now.";
   document.body.appendChild(freeze);
+
+  confettiBlast();
 
   setTimeout(()=>{
     freeze.remove();
@@ -269,18 +265,10 @@ yes.addEventListener("click",()=>{
     hint.style.display="none";
     fake.style.display="none";
     result.style.display="block";
-
-    confettiInstance({
-      particleCount:350,
-      spread:150,
-      startVelocity:65,
-      origin:{x:.5,y:.6}
-    });
-  },1700);
+    confettiBlast();
+  },1800);
 });
 </script>
 </body>
 </html>
-
-
 
