--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>MiMi 💖</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,20 +12,14 @@
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 <style>
-:root{
-  --card:#ffffffee;
-  --yes:#ff2f7b;
-  --yesHover:#ff145f;
-}
-
 *{
   box-sizing:border-box;
-  font-family:'Nunito', system-ui, -apple-system, sans-serif;
+  font-family:'Nunito',sans-serif;
 }
 
 body{
   margin:0;
-  min-height:100svh;
+  min-height:100vh;
   display:grid;
   place-items:center;
   background:
@@ -33,53 +27,35 @@ body{
     url("https://images.unsplash.com/photo-1601758123927-1965d9c9c9a6?q=80&w=1600&auto=format&fit=crop");
   background-size:cover;
   background-position:center bottom;
-  background-repeat:no-repeat;
   overflow:hidden;
-  padding:14px;
 }
 
 canvas{
   position:fixed;
   inset:0;
   pointer-events:none;
-  z-index:20;
+  z-index:1;
 }
 
 .card{
-  width:min(720px,96vw);
-  padding:34px 26px 38px;
-  background:var(--card);
-  backdrop-filter:blur(10px);
+  width:min(720px,94vw);
+  padding:32px 26px;
+  background:#ffffffee;
   border-radius:28px;
   text-align:center;
   box-shadow:0 30px 90px rgba(0,0,0,.18);
-  position:relative;
-  z-index:10;
+  z-index:2;
 }
 
-h1{
-  font-size:clamp(26px,4.6vw,48px);
-  margin:10px 0;
-  font-weight:800;
-}
-
-p{
-  font-size:16px;
-  opacity:.85;
-  margin-bottom:22px;
-}
+h1{font-weight:800}
+p{opacity:.85}
 
 .zone{
   position:relative;
-  width:min(520px,100%);
   height:180px;
-  margin:0 auto;
 }
 
 button{
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
   padding:16px 30px;
   font-size:18px;
   font-weight:800;
@@ -90,64 +66,42 @@ button{
 }
 
 #yes{
-  left:16%;
-  background:var(--yes);
+  background:#ff2f7b;
   color:#fff;
 }
 
-#yes:hover{background:var(--yesHover)}
-
 #no{
-  left:64%;
   background:#e5e7eb;
-  color:#111;
+  position:fixed;
+  z-index:5;
 }
 
 .hint{
   margin-top:14px;
-  font-size:14px;
-  min-height:22px;
-  opacity:.7;
+  font-size:15px;
+  min-height:26px;
 }
 
 .fake{
   font-size:13px;
-  opacity:.6;
-  margin-top:8px;
+  opacity:.65;
+  min-height:18px;
 }
 
 .result{
   display:none;
-  margin-top:28px;
-  animation:pop .5s ease;
+  margin-top:26px;
 }
-
-@keyframes pop{
-  from{transform:scale(.92);opacity:0}
-  to{transform:scale(1);opacity:1}
-}
-
-@keyframes heartbeat{
-  0%{transform:translateY(-50%) scale(1)}
-  25%{transform:translateY(-50%) scale(1.05)}
-  40%{transform:translateY(-50%) scale(1)}
-  60%{transform:translateY(-50%) scale(1.08)}
-  100%{transform:translateY(-50%) scale(1)}
-}
-.heartbeat{animation:heartbeat 1.5s infinite}
 
 .freeze{
   position:fixed;
   inset:0;
-  background:rgba(255,255,255,.96);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-  z-index:99999;
-  font-size:clamp(26px,5vw,50px);
+  background:#fff;
+  display:grid;
+  place-items:center;
+  font-size:clamp(28px,5vw,52px);
   font-weight:800;
-  animation:pop .4s ease;
+  z-index:9999;
 }
 
 audio{display:none}
@@ -161,33 +115,29 @@ audio{display:none}
   <source src="https://assets.mixkit.co/music/preview/mixkit-romantic-piano-loop-779.mp3">
 </audio>
 
-<main class="card">
+<div class="card">
   <h1>MiMi… 🧸💖</h1>
-  <p>
-    I made this for the prettiest girl in the world.<br>
-    No rush. No pressure.
-  </p>
+  <p>I made this for the prettiest girl in the world.</p>
 
   <h1>Will you be my Valentine?</h1>
 
-  <div class="zone" id="zone">
+  <div class="zone">
     <button id="yes">YES 💘</button>
-    <button id="no">No 🙄</button>
   </div>
 
-  <div class="hint" id="hint">Careful… that button has feelings 😌</div>
+  <div class="hint" id="hint"></div>
   <div class="fake" id="fake"></div>
 
   <div class="result" id="result">
     <h1>There it is ❤️</h1>
-    <p>No jokes now.<br>Just me choosing you.</p>
+    <p>No jokes now. Just me choosing you.</p>
     <h1>💍 Always.</h1>
-    <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="260">
   </div>
-</main>
+</div>
+
+<button id="no">No 🙄</button>
 
 <script>
-const zone = document.getElementById("zone");
 const yes = document.getElementById("yes");
 const no = document.getElementById("no");
 const hint = document.getElementById("hint");
@@ -196,79 +146,79 @@ const result = document.getElementById("result");
 const canvas = document.getElementById("confetti");
 const music = document.getElementById("music");
 
-const confettiInstance = confetti.create(canvas,{resize:true,useWorker:true});
-setTimeout(()=>yes.classList.add("heartbeat"),2000);
-
-function confettiBlast(){
-  const duration = 2500;
-  const end = Date.now() + duration;
-
-  (function frame(){
-    confettiInstance({
-      particleCount: 20,
-      spread: 160,
-      startVelocity: 55,
-      gravity: 0.7,
-      ticks: 300,
-      scalar: 1.3,
-      shapes: ["square","circle"],
-      origin: { x: Math.random(), y: -0.1 }
-    });
-    if (Date.now() < end) requestAnimationFrame(frame);
-  })();
-}
-
-function clamp(v,min,max){return Math.max(min,Math.min(max,v))}
-
-let count=0, yesScale=1;
-const noLines=[
-  "Nice try 😌","That’s adorable, but no.","You’re teasing now.",
-  "Decorative button.","We both know.","MiMi… be serious 😏",
-  "Not fooling anyone.","You’re smiling.","Drama queen.","Enough playing."
+const jokes=[
+  "Nice try 😌",
+  "That’s adorable, but no.",
+  "You really thought?",
+  "MiMi… behave 😏",
+  "You’re smiling right now.",
+  "This button is lying to you.",
+  "Bold choice. Wrong one.",
+  "Drama detected.",
+  "You’re enjoying this.",
+  "Okay now you’re flirting."
 ];
 
-zone.addEventListener("pointermove",e=>{
-  const b=no.getBoundingClientRect();
-  if(Math.hypot((b.left+b.width/2)-e.clientX,(b.top+b.height/2)-e.clientY)<150){
-    const z=zone.getBoundingClientRect();
-    let dx=(b.left+b.width/2)-e.clientX;
-    let dy=(b.top+b.height/2)-e.clientY;
-    let mag=Math.hypot(dx,dy)||1;
-    dx/=mag; dy/=mag;
+const reactions=[
+  "MiMi vs destiny",
+  "Universe laughing quietly",
+  "System override engaged",
+  "Romantic sabotage detected",
+  "Probability of NO: 0%"
+];
 
-    no.style.left=clamp((b.left-z.left)+dx*140,0,z.width-b.width)+"px";
-    no.style.top=clamp((b.top-z.top)+dy*140,0,z.height-b.height)+"px";
+let j=0, r=0;
 
-    yesScale=Math.min(2.5,yesScale+.12);
-    yes.style.transform=`translateY(-50%) scale(${yesScale})`;
+/* NO BUTTON CHAOS */
+function moveNo(){
+  const x=Math.random()*(innerWidth-120);
+  const y=Math.random()*(innerHeight-60);
+  no.style.left=x+"px";
+  no.style.top=y+"px";
+  no.style.transform=`rotate(${Math.random()*360}deg)`;
 
-    hint.textContent=noLines[count%noLines.length];
-    fake.textContent="MiMi is enjoying this 😏";
-    count++;
-  }
-});
+  hint.textContent=jokes[j++%jokes.length];
+  fake.textContent=reactions[r++%reactions.length];
+}
 
+no.addEventListener("mouseenter",moveNo);
 no.addEventListener("click",e=>e.preventDefault());
 
+/* CONFETTI SHOWER LOOP */
+const confettiInstance=confetti.create(canvas,{resize:true,useWorker:true});
+
+(function rain(){
+  confettiInstance({
+    particleCount:25,
+    spread:90,
+    startVelocity:0,
+    gravity:0.6,
+    ticks:400,
+    scalar:1.4,
+    shapes:["square","circle"],
+    origin:{x:Math.random(),y:-0.1}
+  });
+  setTimeout(rain,120);
+})();
+
+/* YES */
 yes.addEventListener("click",()=>{
   music.play().catch(()=>{});
+
   const freeze=document.createElement("div");
   freeze.className="freeze";
-  freeze.innerHTML="MiMi 🧸💖<br>This moment is yours now.";
+  freeze.innerHTML="MiMi 💖<br>This moment is yours now.";
   document.body.appendChild(freeze);
 
-  confettiBlast();
+  confettiInstance({particleCount:400,spread:180,startVelocity:70});
 
   setTimeout(()=>{
     freeze.remove();
-    zone.style.display="none";
-    hint.style.display="none";
-    fake.style.display="none";
     result.style.display="block";
-    confettiBlast();
   },1800);
 });
 </script>
 </body>
 </html>
+
 
