--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ audio{display:none}
   <source src="https://assets.mixkit.co/music/preview/mixkit-romantic-piano-loop-779.mp3">
 </audio>
 
-<div class="card">
+<div class="card" id="card">
   <h1>MiMi… 🧸💖</h1>
   <p>I made this for the prettiest girl in the world.</p>
 
@@ -130,7 +130,7 @@ audio{display:none}
 
   <div class="result" id="result">
     <h1>There it is ❤️</h1>
-    <p>No jokes now. Just me choosing you.</p>
+    <p>No jokes now.<br>Just me choosing you.</p>
     <h1>💍 Always.</h1>
   </div>
 </div>
@@ -143,6 +143,7 @@ const no = document.getElementById("no");
 const hint = document.getElementById("hint");
 const fake = document.getElementById("fake");
 const result = document.getElementById("result");
+const card = document.getElementById("card");
 const canvas = document.getElementById("confetti");
 const music = document.getElementById("music");
 
@@ -171,37 +172,40 @@ let j=0, r=0;
 
 /* NO BUTTON CHAOS */
 function moveNo(){
-  const x=Math.random()*(innerWidth-120);
-  const y=Math.random()*(innerHeight-60);
-  no.style.left=x+"px";
-  no.style.top=y+"px";
+  no.style.left=Math.random()*(innerWidth-120)+"px";
+  no.style.top=Math.random()*(innerHeight-60)+"px";
   no.style.transform=`rotate(${Math.random()*360}deg)`;
 
   hint.textContent=jokes[j++%jokes.length];
   fake.textContent=reactions[r++%reactions.length];
 }
-
 no.addEventListener("mouseenter",moveNo);
 no.addEventListener("click",e=>e.preventDefault());
 
-/* CONFETTI SHOWER LOOP */
+/* CONFETTI (STARTS ONLY AFTER YES) */
 const confettiInstance=confetti.create(canvas,{resize:true,useWorker:true});
+let confettiRunning=false;
 
-(function rain(){
-  confettiInstance({
-    particleCount:25,
-    spread:90,
-    startVelocity:0,
-    gravity:0.6,
-    ticks:400,
-    scalar:1.4,
-    shapes:["square","circle"],
-    origin:{x:Math.random(),y:-0.1}
-  });
-  setTimeout(rain,120);
-})();
+function startConfettiRain(){
+  if(confettiRunning) return;
+  confettiRunning=true;
 
-/* YES */
+  (function rain(){
+    confettiInstance({
+      particleCount:30,
+      spread:120,
+      startVelocity:0,
+      gravity:0.7,
+      ticks:500,
+      scalar:1.5,
+      shapes:["square","circle"],
+      origin:{x:Math.random(),y:-0.1}
+    });
+    if(confettiRunning) setTimeout(rain,120);
+  })();
+}
+
+/* YES CLICK */
 yes.addEventListener("click",()=>{
   music.play().catch(()=>{});
 
@@ -210,11 +214,12 @@ yes.addEventListener("click",()=>{
   freeze.innerHTML="MiMi 💖<br>This moment is yours now.";
   document.body.appendChild(freeze);
 
-  confettiInstance({particleCount:400,spread:180,startVelocity:70});
+  confettiInstance({particleCount:500,spread:180,startVelocity:70});
 
   setTimeout(()=>{
     freeze.remove();
     result.style.display="block";
+    startConfettiRain();
   },1800);
 });
 </script>
